# sonnet-sv

./: .gitignore
backend/: alembic.ini  history.sqlite  main.py  pyproject.toml
backend/app/: api.py  base_faststream.py  exception_handling.py  exceptions.py  redis_client.py
backend/app/auth/: auth.py  auth_bearer.py
backend/app/database/: db.py  mixins.py
backend/app/drivers/: api.py  errors.py  interface.py  models.py  schemas.py  stream.py
backend/app/drives/: api.py  interface.py  models.py  schemas.py
backend/app/users/: api.py  errors.py  interface.py  models.py  schemas.py
backend/app/utils/: common.py
backend/app/vehicle/: api.py  errors.py  interface.py  models.py  schemas.py
backend/scripts/: env.py
backend/scripts/versions/: 137b138d2c3e_create_vehicle_table.py  5fdb54d8f27a_create_user_table.py  9deece31c656_add_dropoff_and_pickup_location_in_.py  baa38daca8b3_create_drive_table.py  c0b16da85943_add_vehicle_id_column_to_drive_table.py
frontend/: package-lock.json  package.json
frontend/app/layouts/: HomeLayout.tsx
frontend/app/routes/: home.tsx
